--- a/KosmoForumClient/Views/Category/Upsert.cshtml
+++ b/KosmoForumClient/Views/Category/Upsert.cshtml
@@ -3,74 +3,93 @@
     var title = "Stwórz kategorie";
 }
 
-<input type="hidden" value="@TempData["error"]" id ="tempDataError"/>
+<div class="container p-5" align="center">
 
-<form method="post" asp-action="Upsert" enctype="multipart/form-data">
+    <input type="hidden" value="@TempData["error"]" id ="tempDataError"/>
 
-    <div class="row px-2 mx-2 backgroundWhite border">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        @if (Model.Id != 0)
-        {
-            <input type="hidden" asp-for="Id" />
-            title = "Edycja kategorii";
-        }
+    <form method="post" asp-action="Upsert" enctype="multipart/form-data">
 
-        <div class="col-12 p-3">
-            <h2 class="text-primary">@title</h2>
-        </div>
-        <div class="col-8">
-            <div class="form-group row">
-                <div class="col-4">
-                    <label asp-for="Title"></label>
-                </div>
-                <div class="col-8">
-                    <input asp-for="Title" class="form-control" />
-                    <span asp-validation-for="Title" class="text-danger"></span>
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col-4">
-                    <label asp-for="Description"></label>
-                </div>
-                <div class="col-8">
-                    <input asp-for="Description" class="form-control" />
-                    <span asp-validation-for="Description" class="text-danger"></span>
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col-4">
-                    <label asp-for="Image"></label>
-                </div>
-                <div class="col-8">
-                    <input type="file" asp-for="Image" id="projectImage" name="files"class="form-control" />
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col-4 offset-4">
-                    <button type="submit" class="btn btn-primary form-control">
-                        @(Model.Id!=0 ? "Update":"Create")
-                    </button>
-                </div>
-                <div class="col-4">
-                    <a asp-action="Index" class="btn btn-success form-control">Powrót</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-4 text-right" style="width: 250px;">
-            @if (Model.Image != null)
+        <div class="shadow-lg justify-content-center p-3 w-auto" align="center">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @if (Model.Id != 0)
             {
-                var base64 = Convert.ToBase64String(Model.Image);
-                var imgSrc = string.Format("data:image/jpg;base64,{0}", base64);
-                <img src="@imgSrc" width="100%" />
+                <input type="hidden" asp-for="Id" />
+                title = "Edycja kategorii";
             }
 
+            <div class="col-12 p-3">
+                <h2 class="text-primary pb-3">@title</h2>
+            </div>
+            <div class="col-8">
+                <div class="form-group row">
+                    <div class="col-4">
+                        <label asp-for="Title"></label>
+                    </div>
+                    <div class="col-8">
+                        <input asp-for="Title" class="form-control" />
+                        <span asp-validation-for="Title" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-4">
+                        <label asp-for="Description"></label>
+                    </div>
+                    <div class="col-8">
+                        <input asp-for="Description" class="form-control" />
+                        <span asp-validation-for="Description" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-4">
+                        <label asp-for="Image"></label>
+                    </div>
+                    <div class="col-8">
+                        <div class="custom-file">
+                            <input type="file" asp-for="Image" id="projectImage" onchange="checkAmountOfFile(this)" name="files"
+                                   class="form-control custom-file-input" />
+                            <label class="custom-file-label text-left" for="projectImage" id="projectImageLabel">Wybierz Plik</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-4 offset-4">
+                        <button type="submit" class="btn btn-primary form-control">
+                            @(Model.Id!=0 ? "Update":"Create")
+                        </button>
+                    </div>
+                    <div class="col-4">
+                        <a asp-action="Index" class="btn btn-success form-control">Powrót</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4 text-right" style="width: 250px;">
+                @if (Model.Image != null)
+                {
+                    var base64 = Convert.ToBase64String(Model.Image);
+                    var imgSrc = string.Format("data:image/jpg;base64,{0}", base64);
+                    <img src="@imgSrc" width="100%" />
+                }
+
+            </div>
         </div>
-    </div>
 
-</form>
-
+    </form>
+</div>
 @section Scripts
 {
     <script src="~/js/showErrorsFromApi.js"></script>
+    <script>
+        function checkAmountOfFile(id) {
+            if (id.files.length > 1) {
+                toastr.error("Maksymalnie 1 avatar");
+                document.getElementById("projectImage").value = "";
+            }
+            changeLabel(id);
+        }
+
+        function changeLabel(id) {
+            document.getElementById("projectImageLabel").textContent = id.files[0].name;
+        }
+    </script>
 }
 
