--- a/KosmoForumClient/Views/Home/Index.cshtml
+++ b/KosmoForumClient/Views/Home/Index.cshtml
@@ -5,30 +5,32 @@
 }
 
 <input type="hidden" value="@TempData["error"]" id="tempDataError" />
-<div class="text-center container p-5">
-    <table class="table table-bordered table-hover">
-        <thead class="bg-primary">
-        <tr>
-            <th scope="col" style="width: 10%"></th>
-            <th scope="col">Kategoria</th>
-            <th scope="col">Opis</th>
-        </tr>
-        </thead>
-        <tbody>
-        @foreach (var item in Model.CategoriesList)
-        {
+<div class="text-center container p-5" align="center">
+    <div class="shadow-lg justify-content-center p-3 w-auto" align="center">
+        <table class="table table-hover">
+            <thead class="bg-primary">
             <tr>
-                <th scope="row"><img src="@string.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(item.Image))"
-                                     style='width: 50px; height: 50px;'/></th>
-                <td><a href="forumpost/ForumPostInCategory?title=@item.Title">@item.Title</a></td>
-                <td>@item.Description</td>
+                <th scope="col" style="width: 10%"></th>
+                <th scope="col" class="text-center">Kategoria</th>
+                <th scope="col" class="text-center">Opis</th>
             </tr>
+            </thead>
+            <tbody>
+            @foreach (var item in Model.CategoriesList)
+            {
+                <tr>
+                    <th scope="row" class="text-center">
+                        <img class ="rounded-circle" src="@string.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(item.Image))"
+                             style='width: 50px; height: 50px;'/></th>
+                    <td class="text-center align-middle"><h5><a href="forumpost/ForumPostInCategory?title=@item.Title" class="text-primary">@item.Title</a></h5></td>
+                    <td class="text-center align-middle">@item.Description</td>
+                </tr>
 
-        }
-        </tbody>
-    </table>
+            }
+            </tbody>
+        </table>
+    </div>
 </div>
-
 @section Scripts{ 
 <script src="~/js/showErrorsFromApi.js"></script>
 }
