--- a/KosmoForumClient/Views/ForumPost/Upsert.cshtml
+++ b/KosmoForumClient/Views/ForumPost/Upsert.cshtml
@@ -50,7 +50,7 @@
     }
 </style>
 
-<div class="container p-5" align="center">
+<div class="container p-5 w-auto" align="center">
 
     <input type="hidden" value="@TempData["error"]" id="tempDataError" />
 
