--- a/KosmoForumClient/Views/Home/Index.cshtml
+++ b/KosmoForumClient/Views/Home/Index.cshtml
@@ -20,8 +20,9 @@
             {
                 <tr>
                     <th scope="row" class="text-center">
-                        <img class ="rounded-circle" src="@string.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(item.Image))"
-                             style='width: 50px; height: 50px;'/></th>
+                        <img class="rounded-circle" src="@string.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(item.Image))"
+                             style='width: 50px; height: 50px;'/>
+                    </th>
                     <td class="text-center align-middle"><h5><a href="forumpost/ForumPostInCategory?title=@item.Title" class="text-primary">@item.Title</a></h5></td>
                     <td class="text-center align-middle">@item.Description</td>
                 </tr>
