Delete some bugs occuring during presenting opinion's upsert partialview.
Return to ReadForumPost view after unsuccessful attempt of creating opinion
Change default mark on opinion from -1 to 0
Comment One from two opinion upsert method (post method still occuring)

--- a/KosmoForumClient/Views/ForumPost/ReadForumPost.cshtml
+++ b/KosmoForumClient/Views/ForumPost/ReadForumPost.cshtml
@@ -107,7 +107,8 @@
         else
         {
             <div class="col-6 text-right">
-                <a href="@Url.ActionLink("Login","Home")?returnUrl=/forumPost/ReadForumPost/@Model.forumPost.Id" class="btn btn-primary text-white"><i class="fas fa-plus"></i> &nbsp; Dodaj Komentarz</a>
+                <a href="@Url.ActionLink("Login","Home")?returnUrl=/forumPost/ReadForumPost/@Model.forumPost.Id"
+                   class="btn btn-primary text-white"><i class="fas fa-plus"></i> &nbsp; Dodaj Komentarz</a>
             </div>
         }
 
@@ -142,7 +143,7 @@
                 data: { forumPostId: @Model.forumPost.Id, opinionId },
                 success: function (result) {
                     $("#dynamicContent").html(result);
-                },
+                }
             });
 
         }
