--- a/KosmoForumClient/Views/Shared/Components/Opinion/Default.cshtml
+++ b/KosmoForumClient/Views/Shared/Components/Opinion/Default.cshtml
@@ -5,7 +5,7 @@
 
 
 
-<form method="post" asp-action="Upsert" asp-controller="Opinions" enctype="multipart/form-data" class="p-5">
+<form method="post" id="opinionUpsertForm" asp-action="Upsert" asp-controller="Opinions" enctype="multipart/form-data" class="p-5">
 
     <div class="row backgroundWhite border shadow-lg rounded p-3 w-100" align="center">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -34,15 +34,12 @@
                     <label asp-for="Marks">Ocena : </label>
                 </div>
                 <div class="col-8">
-                    <i class="fa fa-star-o fa-2x" id="star0" style="color: pink" aria-hidden="true" onclick="changeStars(0)" onmouseover="focusStars(0)" onmouseout="focusOutStars(0)"></i>
+                    <i class="fa fa-star fa-2x" id="star0" style="color: pink" aria-hidden="true" onclick="changeStars(0)" onmouseover="focusStars(0)" onmouseout="focusOutStars(0)"></i>
                     <i class="fa fa-star-o fa-2x" id="star1" style="color: pink" aria-hidden="true" onclick="changeStars(1)" onmouseover="focusStars(1)" onmouseout="focusOutStars(1)"></i>
                     <i class="fa fa-star-o fa-2x" id="star2" style="color: pink" aria-hidden="true" onclick="changeStars(2)" onmouseover="focusStars(2)" onmouseout="focusOutStars(2)"></i>
                     <i class="fa fa-star-o fa-2x" id="star3" style="color: pink" aria-hidden="true" onclick="changeStars(3)" onmouseover="focusStars(3)" onmouseout="focusOutStars(3)"></i>
                     <i class="fa fa-star-o fa-2x" id="star4" style="color: pink" aria-hidden="true" onclick="changeStars(4)" onmouseover="focusStars(4)" onmouseout="focusOutStars(4)"></i>
-                    <input type="hidden" asp-for="Marks" id="markInput" value="-1" />
-
-
-
+                    <input type="hidden" asp-for="Marks" id="markInput" value="0" />
                 </div>
             </div>
             <div class="form-group row">
@@ -59,6 +56,7 @@
     </div>
 
 </form>
+
 
 
 
